--- a/.babelrc
+++ b/.babelrc
@@ -9,7 +9,8 @@
           "@redux":"./src/redux",
           "@routing":"./src/routing",
           "@screens":"./src/screens",
-          "@constants":"./src/constants"
+          "@constants":"./src/constants",
+          "@test":"./src/test"
         }
       }]
     ]
