--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "json-server": "^1.0.0-alpha.23",
     "moment": "^2.30.1",
     "moment-range": "^4.0.2",
+    "msw": "^1.3.3",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
@@ -27,7 +28,6 @@
     "react-scripts": "5.0.1",
     "react-window": "^1.8.10",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
